force-app/main/default/objects/Case/fields/AI_Email_Subject__c.field-meta.xml
<CustomField>
    <fullName>AI_Email_Subject__c</fullName>
    <label>AI Email Subject</label>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>