force-app/main/default/objects/Case/fields/AI_Suggested_Articles__c.field-meta.xml
<CustomField>
    <fullName>AI_Suggested_Articles__c</fullName>
    <label>AI Suggested Articles</label>
    <type>Text</type>
    <length>255</length>
</CustomField>