force-app/main/default/objects/Case/fields/AI_Suggested_Product__c.field-meta.xml
<CustomField>
    <fullName>AI_Suggested_Product__c</fullName>
    <label>AI Suggested Product</label>
    <type>Text</type>
    <length>255</length>
</CustomField>