force-app/main/default/objects/Case/fields/Case_Sentiment__c.field-meta.xml
<CustomField>
    <fullName>Case_Sentiment__c</fullName>
    <label>Case Sentiment</label>
    <type>TextArea</type>
</CustomField>