force-app/main/default/objects/Case/fields/Client_Tier__c.field-meta.xml
<CustomField>
    <fullName>Client_Tier__c</fullName>
    <label>Client Tier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Placeholder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>