force-app/main/default/objects/Case/fields/Email_AI__c.field-meta.xml
<CustomField>
    <fullName>Email_AI__c</fullName>
    <label>AI Email Body</label>
    <type>Html</type>
    <length>131072</length>
</CustomField>