force-app/main/default/objects/Case/fields/Ext_ID__c.field-meta.xml
<CustomField>
    <fullName>Ext_ID__c</fullName>
    <label>Ext ID</label>
    <type>Text</type>
    <length>30</length>
    <externalId>true</externalId>
</CustomField>