force-app/main/default/objects/Case/fields/Extracted_Product_Information__c.field-meta.xml
<CustomField>
    <fullName>Extracted_Product_Information__c</fullName>
    <label>Extracted Property Information</label>
    <type>LongTextArea</type>
    <length>10000</length>
</CustomField>