force-app/main/default/objects/Case/fields/File_Summary__c.field-meta.xml
<CustomField>
    <fullName>File_Summary__c</fullName>
    <label>File Summary</label>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>