force-app/main/default/objects/Case/fields/File_Summary_Done__c.field-meta.xml
<CustomField>
    <fullName>File_Summary_Done__c</fullName>
    <label>File Summary Done</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>