force-app/main/default/objects/Case/fields/GPTfy_Question__c.field-meta.xml
<CustomField>
    <fullName>GPTfy_Question__c</fullName>
    <label>GPTfy Question</label>
    <type>LongTextArea</type>
    <length>10000</length>
</CustomField>