force-app/main/default/objects/Case/fields/GPTfy_Sentiment__c.field-meta.xml
<CustomField>
    <fullName>GPTfy_Sentiment__c</fullName>
    <label>Sentiment</label>
    <type>Text</type>
    <length>255</length>
</CustomField>