force-app/main/default/objects/Case/fields/GPTfy_Status__c.field-meta.xml
<CustomField>
    <fullName>GPTfy_Status__c</fullName>
    <label>GPTfy Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Placeholder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>