force-app/main/default/objects/Case/fields/GPTfy_Summary__c.field-meta.xml
<CustomField>
    <fullName>GPTfy_Summary__c</fullName>
    <label>Summary</label>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>