force-app/main/default/objects/Case/fields/Intent_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Intent_Analysis__c</fullName>
    <label>Intent Analysis</label>
    <type>LongTextArea</type>
    <length>2000</length>
</CustomField>