force-app/main/default/objects/Case/fields/Intention__c.field-meta.xml
<CustomField>
    <fullName>Intention__c</fullName>
    <label>Intention</label>
    <type>TextArea</type>
</CustomField>