force-app/main/default/objects/Case/fields/Internal_Account__c.field-meta.xml
<CustomField>
    <fullName>Internal_Account__c</fullName>
    <label>Internal Account</label>
    <type>Text</type>
    <length>255</length>
    <externalId>true</externalId>
</CustomField>