force-app/main/default/objects/Case/fields/issue_Triage_Routing__c.field-meta.xml
<CustomField>
    <fullName>issue_Triage_Routing__c</fullName>
    <label>Issue Triage Routing</label>
    <type>Text</type>
    <length>100</length>
</CustomField>