force-app/main/default/objects/Case/fields/Issue_Triage_Score__c.field-meta.xml
<CustomField>
    <fullName>Issue_Triage_Score__c</fullName>
    <label>Issue Triage Score</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>