force-app/main/default/objects/Case/fields/KB_Candidates__c.field-meta.xml
<CustomField>
    <fullName>KB_Candidates__c</fullName>
    <description>Serialized existing Knowledge article candidates for the GPTfy KB Creation Prompt. Staging field — cleared after the prompt action runs.</description>
    <label>KB Candidates</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>