force-app/main/default/objects/Case/fields/KB_Prompt_Context__c.field-meta.xml
<CustomField>
    <fullName>KB_Prompt_Context__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the staging record that holds KB candidate articles for the GPTfy KB Creation Prompt.</description>
    <label>KB Prompt Context</label>
    <referenceTo>KB_Prompt_Context__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>