force-app/main/default/objects/Case/fields/Open_Related_Tickets__c.field-meta.xml
<CustomField>
    <fullName>Open_Related_Tickets__c</fullName>
    <label>Open Related Tickets</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
</CustomField>