force-app/main/default/objects/Case/fields/Order_created__c.field-meta.xml
<CustomField>
    <fullName>Order_created__c</fullName>
    <label>Order created and Sent</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>