force-app/main/default/objects/Case/fields/Prior_Escalation_Same_Issue__c.field-meta.xml
<CustomField>
    <fullName>Prior_Escalation_Same_Issue__c</fullName>
    <label>Prior Escalation Same Issue</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>