force-app/main/default/objects/Case/fields/Prior_Ticket_Refs__c.field-meta.xml
<CustomField>
    <fullName>Prior_Ticket_Refs__c</fullName>
    <label>Prior Ticket Refs</label>
    <type>Text</type>
    <length>255</length>
</CustomField>