force-app/main/default/objects/Case/fields/Problem_statement__c.field-meta.xml
<CustomField>
    <fullName>Problem_statement__c</fullName>
    <label>Problem Statement</label>
    <type>Html</type>
    <length>131072</length>
</CustomField>