force-app/main/default/objects/Case/fields/Products__c.field-meta.xml
<CustomField>
    <fullName>Products__c</fullName>
    <label>Products</label>
    <type>TextArea</type>
</CustomField>