force-app/main/default/objects/Case/fields/Proposed_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Resolution__c</fullName>
    <label>Proposed Resolution</label>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>