force-app/main/default/objects/Case/fields/Response_Description__c.field-meta.xml
<CustomField>
    <fullName>Response_Description__c</fullName>
    <label>Response Description</label>
    <type>Html</type>
    <length>131072</length>
</CustomField>