force-app/main/default/objects/Case/fields/SLA_Class__c.field-meta.xml
<CustomField>
    <fullName>SLA_Class__c</fullName>
    <label>SLA Class</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Placeholder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>