force-app/main/default/objects/Case/fields/SLA_Response_Hours__c.field-meta.xml
<CustomField>
    <fullName>SLA_Response_Hours__c</fullName>
    <label>SLA Response Hours</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>2</scale>
</CustomField>