force-app/main/default/objects/Case/fields/Sub__c.field-meta.xml
<CustomField>
    <fullName>Sub__c</fullName>
    <label>Sub Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Placeholder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>