force-app/main/default/objects/Case/fields/Ticket_Age_Hours__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Age_Hours__c</fullName>
    <label>Ticket Age Hours</label>
    <type>Number</type>
    <precision>8</precision>
    <scale>2</scale>
</CustomField>