force-app/main/default/objects/Case/fields/Topics__c.field-meta.xml
<CustomField>
    <fullName>Topics__c</fullName>
    <label>Topics</label>
    <type>Text</type>
    <length>255</length>
</CustomField>