force-app/main/default/objects/Case/fields/URL_Name__c.field-meta.xml
<CustomField>
    <fullName>URL_Name__c</fullName>
    <label>URL Name</label>
    <type>TextArea</type>
</CustomField>